# burdbot-rust

./: .gitignore  Cargo.toml  TODO.txt  build-release.sh  rustfmt.toml
.github/actions/setup-burdbot-workspace/: action.yml
.github/workflows/: burdbot-audit.yml  burdbot-main-ci.yml  rust.yml
burdbot/: Cargo.toml  LICENSE  README.md  lynx.cfg
burdbot-macros/: Cargo.toml
burdbot-macros/burdbot-macros-impl/: Cargo.toml
burdbot-macros/burdbot-macros-impl/src/: lib.rs
burdbot-macros/burdbot-macros-internal/: Cargo.toml
burdbot-macros/burdbot-macros-internal/src/: lib.rs
burdbot-macros/src/: lib.rs
burdbot/src/: argument_parser.rs  commands.rs  error.rs  event_handler.rs  forvo.rs  id_search_engine.rs  image_checker.rs  logger.rs  main.rs  session_tracker.rs  spanish_english.rs  util.rs  vocaroo.rs
burdbot/src/argument_parser/: error.rs
burdbot/src/birthday_tracker/: birthday_manager.rs  birthday_server_role_manager.rs  mod.rs  role_updater.rs
burdbot/src/commands/: administrative.rs  birthday.rs  custom.rs  easter_egg.rs  error_util.rs  language.rs  vocaroo.rs
src/: argument_parser.rs  custom.rs  error.rs  event_handler.rs  forvo.rs  lib.rs  lib_util.rs  logger.rs  main.rs  spanish_english.rs  util.rs  vocaroo.rs
src/birthday_tracker/: birthday_manager.rs  birthday_server_role_manager.rs  mod.rs  role_updater.rs
src/commands/: administrative.rs  birthday.rs  custom.rs  easter_egg.rs  error_util.rs  help.rs  language.rs  mod.rs  util.rs  vocaroo.rs
src/commands/error_util/: error.rs
src/commands/language/: forvo.rs
src/commands/language/forvo/: error.rs
src/commands/util/: user_search_engine.rs
src/custom/: spanish_english.rs
src/events/: mod.rs
src/session_tracker/: mod.rs  voice_handler.rs
src/util/: mod.rs
