[package]
name = "burdbot"
version = "2.0.0"
authors = ["DELIBURD"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.8"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "time"] }
simple_logger = "1.11.0"
log = "0.4.14"
rusqlite = { version = "0.25.3", features = ["chrono", "bundled"] }
songbird = "0.1.6"
bimap = "0.6.1"
chrono = "0.4.19"
lazy_static = "1.4.0"
regex = "1.5.4"
simsearch = "0.2.3"
async-ctrlc = { version = "1.2.0", features = ["termination"] }
syn = {version="1.0.73",features=["full","fold"]}
aes = "0.7.4"
hex = "0.4.3"
rand = "0.8.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
bytes = "^1.0"

[patch.crates-io]
serenity = { git = 'https://github.com/serenity-rs/serenity' }
#serenity = { path = "../serenity" }

[profile.dev.package."*"]
opt-level = 3

[lib]
proc-macro = true
