[package]
name = "burdbot"
version = "0.3.0"
authors = ["DELIBURD"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
serenity = "^0.10"
tokio = { version = "^1", features = ["rt-multi-thread", "time"] }
simple_logger = "^2"
time = "^0.3"
chrono-tz = "^0.6"
log = "^0.4"
rusqlite = { version = "^0.25", features = ["chrono", "bundled"] }
songbird = "^0.1"
bimap = "^0.6"
futures = "^0.3"
chrono = "^0.4"
lazy_static = "^1"
regex = "^1"
simsearch = "^0.2"
async-ctrlc = { version = "^1", features = ["termination"] }
syn = {version="^1",features=["full","fold"]}
aes = "^0.7"
hex = "^0.4"
rand = "^0.8"
reqwest = { version = "^0.11", default-features = false, features = ["rustls-tls"] }
bytes = "^1"
urlencoding = "^1"
scraper = "^0.12"
petgraph = "^0.6.0"
strum = "^0.21"
strum_macros = "^0.21"
base64 = "^0.13"
thiserror = "^1"

[patch.crates-io]
audiopus = { git = 'https://github.com/DoumanAsh/audiopus/', branch = 'better_sys' }

[profile.release]
lto = true

[profile.dev.package."*"]
opt-level = 3
