[package]
name = "burdbot"
version = "0.6.0"
authors = ["DELIBURD"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
songbird = []
# default = ["songbird"]

[dependencies]
burdbot-macros = { version = "0.1.0", path = "../burdbot-macros" }
serenity = { version = "0.12", features = ["unstable_discord_api"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
simplelog = "0.12"
log = "0.4"
once_cell = "1"
rusqlite = { version = "0.36", features = ["chrono", "bundled"] }
bimap = "0.6"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
lazy_static = "1"
regex = "1"
async-ctrlc = { version = "1", features = ["termination"] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
bytes = "1"
urlencoding = "2"
scraper = "0.23"
petgraph = "0.8.0"
strum = "0.27"
strum_macros = "0.27"
base64 = "0.22"
thiserror = "2"
# songbird = { version = "0.5", optional = true, features = ["receive"] }
rand_09 = { package = "rand", version = "0.9" }
digest = "0.10.7"
hex = "0.4.3"
blake3 = { version = "1.8.2", features = ["traits-preview"] }

[dev-dependencies]
rand_pcg = "0.9"
